# phonetics-engine

./: .env.example  .gitignore  Dockerfile  GOAL.md  README.md  docker-compose.yml  pyproject.toml  render.yaml
docs/superpowers/plans/: 2026-05-06-phonetics-engine-v1.md
eval/: README.md  baseline_levenshtein.py  benchmark.py  evaluate.py  gold_dutch.csv  gold_french.csv  surnames.txt  surnames_fr.txt
migrations/: 001_initial_schema.sql  002_company_id_on_employees.sql
src/phonetics_engine/: auth.py  config.py  decision.py  enums.py  index_cache.py  loader.py  logging_setup.py  main.py  matcher.py  metrics.py  models.py  normalize.py  phonetics.py  prewarm.py
src/phonetics_engine/routes/: legacy.py  match.py  reload.py
tests/: conftest.py
tests/integration/: test_concurrency_lock.py  test_legacy_search.py  test_logging_pii.py  test_match_endpoint.py  test_phone_strip.py  test_prewarm.py  test_reload_endpoint.py  test_status_policy.py  test_tenant_isolation.py  test_threshold_override.py  test_tussenvoegsel_matching.py
tests/unit/: test_auth.py  test_config.py  test_decision.py  test_health.py  test_index_cache.py  test_loader.py  test_matcher.py  test_models.py  test_normalize.py  test_phonetics.py
